--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,12 +17,479 @@ h1,h2,h3,h4,h5,h6{
     margin: 0;
     padding: 0;
 }
-.container{
+/* .container{
     width: 1170px;
     margin: auto;
 }
 .row{
     display: flex;
     flex-wrap: wrap;
+} */
+:root {
+    --text-color: #11161e;
+    --3d-primary-color: #151a32;
+    --comon-colot: #fff;
+    --1st-primary-color: #ff6f61;
+    --paragraph-color: #444;
+    --2nd-primary-color: #ff5645;
+    --background-color: #f1f1f1;
+    --bg: #f1f3f4;
+    --black: #000;
+    --a6aab7: #a6aab7;
+   --font-family: "Josefin Sans", sans-serif;
+   --second-family: "Roboto", sans-serif;
 }
+
 /* =============== CSS COMMON END =================== */
+
+/* ================ NAV START ============= */
+nav ul li a{
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 162%;
+    color: var(--text-color);
+    padding: 0 21px;
+}
+nav ul li a:hover{
+    color: #ff5645;
+    }
+nav ul li .home-active{
+    color: var(--2nd-primary-color);
+}
+nav .icons{
+    display: flex;
+    margin-bottom: 0;
+    padding-left: 0;
+}
+nav .icons li a{
+    padding: 0 10px !important;
+
+}
+nav .icons li:last-child{
+    position: relative;
+}
+nav .icons li:last-child span:last-child{
+    background-color: var(--1st-primary-color);
+    width: 15px;
+    height: 15px;
+    border-radius: 50%;
+    display: inline-block;
+    line-height: 18px;
+    text-align: center;
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 14px;
+    color: var(--comon-colot);
+    position: absolute;
+    right: 2px;
+}
+
+nav .arrow{
+    position: relative;
+}
+
+nav .sub-menu{
+    width: 180px;
+    position: absolute;
+    top: 160px;
+    visibility: hidden;
+    opacity: 0;
+    background-color: #fab1a0;
+    /* box-shadow: #ff6f61; */
+    display: flex;
+    margin-left: -12px;
+    z-index: 1;
+    text-align: center;
+}
+nav .sub-menu{
+    text-align: center;
+    cursor: pointer;
+}
+nav .arrow:hover .sub-menu{
+    visibility: visible;
+    opacity: 1;
+    top: 63px;
+    transition: 0.5s;
+}
+nav .arrow:hover .sub-menu ul li{
+    padding: 5px 0;
+    color: #0e0d0d;
+}
+
+/* ================ SEARCH START ============= */
+.search-body{
+    width: 100%;
+    height: 100vh;
+    background: var(--text-color);
+    position: fixed;
+    top: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    visibility: hidden;
+    opacity: 0;
+    transition: 0.5s all;
+    z-index: 1;
+}
+.search-body.search-active{
+    visibility: visible;
+    opacity: 1;
+}
+.search-body form{
+  width: 100%;
+  max-width: 0px; 
+  border: none; 
+  transition: 0.5s;
+  /* border: 1px solid var(--1st-primary-color); */
+}
+.search-body form.form-active{
+max-width: 400px;
+}
+.search-body form input{
+    border: none;
+    width: 80%;
+    padding: 10px 20px;
+    border-radius: 50px 0 0 50px;
+}
+.search-body form button{
+    width: 18%;
+    border: none;
+   background: var(--1st-primary-color);
+   color: var(--bg);
+   padding: 10px;
+   border-radius: 0 50px 50px 0;
+}
+.search-body form input::placeholder{
+    color: var(--black);
+}
+.search-body .cross-btn{
+    width: 40px;
+    height: 40px;
+    background: transparent;
+    border: 3px solid var(--2nd-primary-color);
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    border-radius: 50%;
+    line-height: 35px;
+    text-align: center;
+    color: #fff;
+    font-size: 18px;
+    cursor: pointer;
+    transition: 0.5s;
+}
+.search-body .cross-btn:hover{
+    transform: rotate(360deg);
+    border: 3px solid var(--comon-colot);
+    color: var(--2nd-primary-color);
+}
+
+/* ================SEARCH END ============== */
+
+/* ================ OFFCANVAS START ============= */
+
+nav .navbar-toggler{
+    border: none;
+}
+.offcanvas-body ul li a{
+    font-family: var(--font-family);
+    color: #000;
+    display: inline-block;
+    padding: 40px 0;
+    font-weight: 600;
+    font-size: 25px;
+}
+.offcanvas-body ul li span{
+    display: inline-block;
+    color: #ff5645;
+    padding: 0 20px 0 0;
+}
+/* ================ OFFCANVAS END ============== */
+
+/* ================ NAVFOOTER START ============= */
+.search-footer{
+    background-color: var(--background-color);
+    position: fixed;
+    z-index: 25;
+    bottom: 0;
+    width: 100%;
+    height: 60px;
+    box-shadow: 3px 3px 30px #383636;
+}
+.search-footer span{
+    background-color: #ff5645;
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    transform: translateY(-50%);
+    text-align: center;
+    line-height: 50px;
+    color: #f1f3f4;
+    cursor: pointer;
+}
+/* ================ NAVFOOTER END ============== */
+
+/* ================ NAV END ============== */
+
+/* ================ BANNER START ============= */
+#banner .slider{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 600px;
+}
+#banner .slider .container{
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+    align-content: center;
+    justify-content: center;
+}
+#banner .slider .container h4{
+   font-family: var(--font-family);
+   font-weight: 600;
+   font-size: 18px;
+   line-height: 156%;
+   color: #1d1d1d;
+}
+#banner .slider .container h2{
+   font-family: var(--font-family);
+   font-weight: 700;
+   font-size: 64px;
+   line-height: 116%;
+   color: #1d1d1d;
+}
+#banner .slider .container p{
+   font-family: var(--second-family);
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 175%;
+   color: #1d1d1d;
+   width: 450px;
+}
+#banner .slider .container a{
+    background-color: #ff5645;
+    display: inline-block;
+    padding: 13px 37px;
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 18px;
+    line-height: 167%;
+    text-align: center;
+    color: var(--comon-colot);
+}
+#banner .dots-active{
+    display: flex;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
+    bottom: 18%;
+}
+#banner .dots-active button{
+    border: none;
+    color: transparent;
+    margin: 0 2.5px;
+    width: 14px;
+    height: 7px;
+    background-color: var(--background-color);
+    border-radius: 5px;
+}
+#banner .slick-active  button{
+width: 35px;
+background-color: var(--1st-primary-color);
+}
+
+/* ================ BANNER END ============== */
+
+/* ================ BEAUTY CREAM START ============= */
+#beauty .row{
+    margin-top: 100px;
+}
+#beauty .row .image{
+    position: relative;
+    display: inline-block;
+}
+#beauty .row .image .contains{
+    position: absolute;
+    background-color: rgba(17,22,30,0.4);
+    transform: scale(0);
+    inset: 39px;
+    transition: 0.5s;
+}
+#beauty .row .image .contains h3{
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 30px;
+    line-height: 133%;
+    text-align: center;
+    color: var(--comon-colot);
+    color: rgba(255,255,255,1);
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+#beauty .row .image h3:hover{
+    color: var(--1st-primary-color);
+    transition: 0.5s;
+}
+#beauty .row .image .contains p{
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 175%;
+    text-align: center;
+    color: var(--comon-colot);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    margin-top: 15px;
+}
+#beauty .row .image p:hover{
+    color: var(--1st-primary-color);
+    transition: 0.5s;
+}
+#beauty .change{
+    margin-top: -20px;
+}
+#beauty .row .image:hover .contains{
+    transform: scale(1);
+}
+/* ================ BEAUTY CREAM END ============== */
+
+/* ================ PRODUCT START =============== */
+#product {
+    padding: 100px;
+}
+#product .left_arrow{
+    position: absolute;
+    left: -10px;
+    top: 50%;
+    font-size: 20px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #151A32;
+    color: var(--comon-colot);
+    text-align: center;
+    line-height: 40px;
+    border-radius: 5px;
+    z-index: 1;
+}
+#product .right_arrow{
+    position: absolute;
+    right: -10px;
+    top: 50%;
+    font-size: 20px;
+    display: inline-block;
+    width: 40px;
+    height: 40px;
+    background-color: #151A32;
+    color: var(--comon-colot);
+    text-align: center;
+    line-height: 40px;
+    border-radius: 5px;
+    z-index: 1;
+}
+#product .heading h4{
+    font-family: var(--font-family);
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 128%;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 20px;
+}
+#product .child_product{
+    padding: 0 10px;
+    position: relative;
+}
+#product .child_product .product_image img{
+    display: block;
+    width: 100%;
+}
+#product .child_product .product_image img:first-child{
+    position: absolute;
+    transition: 0.5s;
+}
+#product .child_product .product_image{
+    overflow: hidden;
+    position: relative;
+}
+#product .child_product .product_image:hover img:first-child{
+    transform: scale(1.2);
+    opacity: 0;
+}
+#product .child_product .product_contains{
+    user-select: text;
+    text-align: center;
+}
+#product .child_product .product_contains p{
+    font-family: var(--font-family);
+    font-weight: 400;
+    font-size: 16px;
+    color: var(--paragraph-color);
+    margin-top: 24px ;
+    margin-bottom: 10px;
+}
+#product .child_product .product_contains h4{
+    font-family: var(--font-family);
+    font-weight: 600;
+    font-size: 18px;
+    text-align: center;
+    color: var(--text-color);
+    margin-bottom: 11px;
+}
+#product .child_product .product_contains h4:hover{
+    color: var(--1st-primary-color);
+    transition: 0.4s;
+}
+#product .child_product .product_contains span{
+   display: inline-block;
+   color: var(--1st-primary-color);
+}
+#product .child_product .product_icons{
+    position: absolute;
+    right: 30px;
+    top: 30px;
+    transition: 0.5s;
+}
+#product .child_product .product_icons li{
+    transition: 0.5s;
+    transform: translateX(-50px);
+    visibility: hidden;
+    opacity: 0;
+}
+#product .child_product:hover .product_icons li{
+    transform: translateX(0px);
+    visibility: visible;
+    opacity: 1;
+}
+#product .child_product .product_icons li:nth-child(2){
+    transition-delay: 0.1s;
+}
+#product .child_product .product_icons li:nth-child(3){
+    transition-delay: 0.2s;
+}
+#product .child_product .product_icons li:nth-child(4){
+    transition-delay: 0.3s;
+}
+#product .child_product .product_icons li a{
+    width: 40px;
+    height: 40px;
+    background-color: var(--comon-colot);
+    display: inline-block;text-align: center;
+    line-height: 40px;
+    color: var(--1st-primary-color);
+    border-radius: 50%;
+    transition: 0.5s;
+    margin: 5px 0;
+}
+#product .child_product .product_icons li a:hover{
+    background-color: var(--1st-primary-color);
+    color: var(--comon-colot);
+}
+/* ================ PRODUCT END =============== */
